<resources>
    <string name="app_name">Optio</string>
    <string name="stress">Stress and Health Manager</string>
    <string name="training">Exercise and Training Manager</string>
    <string name="diet">Diet Planner</string>
    <string name="decision">Decision support</string>
    <string name="questionnaire_SH">Questionnaires</string>
    <string name="recommendation_SH">Recommendations</string>
    <string name="injury_SH">Injury</string>
    <string name="vaccination_SH">Vaccination</string>
    <string name="heartrate_SH">Heart Rate</string>
    <string name="bodycomposition_SH">Body Composition</string>
    <string name="sleep_SH">Sleep</string>
    <string name="competition_Q">Competition</string>
    <string name="precompetition_Q">Pre-Competition</string>
    <string name="psychological_Q">Psychological Demands</string>
    <string name="social_Q">Social Relationship</string>
    <string name="failure_Q">Failure Issues</string>
    <string name="illness_Q">Illness and Injury</string>
    <string name="personal_Q">Personal Life concerns</string>
    <string name="stressHealth_Title">Stress and Health</string>
    <string name="questionnaire_Title">Questionnaires</string>
    <string name="recommendation_Title">Recommendations</string>
    <string name="injury_Title">Injury</string>
    <string name="vaccination_Title">Vaccination</string>
    <string name="heartrate_Title">Heart Rate</string>
    <string name="bodycomposition_Title">Body Composition</string>
    <string name="sleep_Title">Sleep</string>
    <string name="competition_Title">Competition</string>
    <string name="precompetition_Title">Pre-Competition</string>
    <string name="psychological_Title">Psychological Demands</string>
    <string name="social_Title">Social Relationship</string>
    <string name="failure_Title">Failure Issues</string>
    <string name="illness_Title">Illness and Injury</string>
    <string name="personal_Title">Personal Life concerns</string>
    <string name="injuryAdd_Title">Add Injury</string>
    <string name="vaccinationAdd_Title">Add Vaccination</string>
    <string name="injury_detail_Title">Injury Detail</string>
    <string name="injury_edit_Title">Update Injury</string>
    <string name="vaccination_detail_Title">Vaccination Detail</string>
    <string name="vaccination_edit_Title">Update Vaccination</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="mild">Mild</string>
    <string name="moderate">Moderate</string>
    <string name="severe">Severe</string>
    <string name="reason">Reason</string>
    <string name="none">None</string>
    <string name="submit">Submit</string>
    <string name="Competition_Section_1">On Court Tension</string>
    <string name="Question_1_CS1">1. Hesitant to play a certain Stroke?</string>
    <string name="Reason_1_CS1_Q1">Afraid that my returning Shuttlecock will create harm to partner</string>
    <string name="Reason_2_CS1_Q1">Unsure to execute a chosen stroke correctly</string>
    <string name="Question_2_CS1">2. Difficulties during match</string>
    <string name="Answer_1_CS1_Q2">Feeling under pressure</string>
    <string name="Answer_2_CS1_Q2">Being tense during a match</string>
    <string name="Answer_3_CS1_Q2">Me or partner making errors</string>
    <string name="Question_3_CS1">3. Game plan does not work</string>
    <string name="Answer_1_CS1_Q3">Being dictated by the opponent</string>
    <string name="Answer_2_CS1_Q3">Not being able to change a game plan</string>
    <string name="Question_4_CS1">4. Tension Concerning the game score</string>
    <string name="Answer_1_CS1_Q4">At the decisive point</string>
    <string name="Answer_2_CS1_Q4">When points get tight</string>
    <string name="Answer_3_CS1_Q4">The points trailing behind points of the lower rank opponent</string>
    <string name="Answer_4_CS1_Q4">Being caught up when leading</string>
    <string name="Answer_5_CS1_Q4">Afraid of losing when leading</string>
    <string name="Answer_6_CS1_Q4">Having score behind the score of lower rank opponent</string>
    <string name="Competition_Section_2">Receiving Negative treatment from others during competition</string>
    <string name="Question_1_CS2">1. Negative behaviour of Opponent</string>
    <string name="Answer_1_CS2_Q1">Provoked by the opponent</string>
    <string name="Answer_2_CS2_Q1">Opponent purposefully does not want to change the shuttle</string>
    <string name="Answer_3_CS2_Q1">Upset by the attitude of the opponent</string>
    <string name="Answer_4_CS2_Q1">Opponent\'s action</string>
    <string name="Question_2_CS2">2. Biased judging of Referee</string>
    <string name="Answer_1_CS2_Q2">Misjudged by referee or service judge at critical points</string>
    <string name="Answer_2_CS2_Q2">Faulted by the service judge or linesmen</string>
    <string name="Answer_3_CS2_Q2">Referees or linesmen get too outrageous</string>
    <string name="Answer_4_CS2_Q2">Different views to line-judge</string>
    <string name="Question_3_CS2">3. Are you facing Negative Spectators?</string>
    <string name="Answer_1_CS2_Q3">Worrying of being booed by the audience</string>
    <string name="Answer_2_CS2_Q3">Facing noisy, brutal, abusive, wild spectators</string>
    <string name="Answer_3_CS2_Q3">Spectators at the team competition</string>
    <string name="Competition_Section_3">Unpleasant Tournament Site</string>
    <string name="Question_1_CS3">1. Is the court environment unpleasant?</string>
    <string name="Answer_1_CS3_Q1">Unpleasant court condition</string>
    <string name="Answer_2_CS3_Q1">Slippery floor</string>
    <string name="Answer_3_CS3_Q1">Air conditioner</string>
    <string name="Answer_4_CS3_Q1">Lighting - not able to see the shuttle clearly</string>
    <string name="Answer_5_CS3_Q1">Unsuitable speed of shuttle</string>
    <string name="Answer_6_CS3_Q1">Playing in the final, at the main court</string>
    <string name="Answer_7_CS3_Q1">Being watched by so many people</string>
    <string name="Answer_8_CS3_Q1">Have not played before in the court where the competition is held</string>
    <string name="Question_2_CS3">2. Are you playing in cold weather countries?</string>
    <string name="Reason_1_CS3_Q2">Feeling uncomfortable playing in snowy weather</string>
    <string name="Reason_2_CS3_Q2">Cold court</string>
    <string name="Reason_3_CS3_Q2">Playing in a cold weather country</string>
    <string name="Question_3_CS3">3. Are you playing far away from home for a long time?</string>
    <string name="Reason_1_CS3_Q3">Going away for a tournament for a long time</string>
    <string name="Reason_2_CS3_Q3">Travelling far away from home</string>
    <string name="Reason_3_CS3_Q3">Arriving at the tournament site a while before the game starts</string>
    <string name="Reason_4_CS3_Q3">Have to manage the food when playing away from home</string>
    <string name="Personal_Section_1">Personal problems and Family relationship Concerns</string>
    <string name="Question_1_PLC_S1">1. Are you having personal problems?</string>
    <string name="Question_2_PLC_S1">2. Are you having family relationship concerns?</string>
    <string name="Reason_1_PLC_S1_Q2">Worrying bad things will happen to family</string>
    <string name="Reason_2_PLC_S1_Q2">Family member sick</string>
    <string name="Reason_3_PLC_S1_Q2">Being asked to stop playing</string>
    <string name="Personal_Section_2">Financial Concerns</string>
    <string name="Question_1_PLC_S2">1. Do you have any financial concerns?</string>
    <string name="Reason_1_PLC_S2_Q1">Need to support family financially</string>
    <string name="Reason_2_PLC_S2_Q1">Cannot manage financial affairs</string>
    <string name="Personal_Section_3">Future Life Concerns</string>
    <string name="Question_1_PLC_S3">1. Are you doubting about future life?</string>
    <string name="Reason_1_PLC_S3_Q1">Thinking about your own future</string>
    <string name="Reason_2_PLC_S3_Q1">You still doubt about your future</string>
    <string name="Question_2_PLC_S3">2. Are you doubting about life after retired?</string>
    <string name="Reason_1_PLC_S3_Q2">Not certain whether you will get a job after retired</string>
    <string name="Reason_2_PLC_S3_Q2">Realizing that one day you will stop playing</string>
    <string name="Reason_3_PLC_S3_Q2">Worrying about not having a happy life</string>
    <string name="Personal_Section_4">Specific Personal Problems</string>
    <string name="Question_1_PLC_S4">1. Do you have specific personal problems?</string>
    <string name="Reason_1_PLC_S4_Q1">Tyring to go to work beside playing</string>
    <string name="Reason_2_PLC_S4_Q1">Superstitious things</string>
    <string name="Reason_3_PLC_S4_Q1">Being banned from playing</string>
    <string name="Question_1_IIC">1. Are you feeling afraid that you will get sick?</string>
    <string name="Question_2_IIC">2. Are you feeling afraid that you will get injured?</string>
    <string name="Question_3_IIC">3. Are you feeling afraid that you will get injured again?</string>
    <string name="Psychological_Section_1">Expectation of success</string>
    <string name="Question_1_PD_S1">1. Expectation of being the best</string>
    <string name="Answer_1_PD_S1_Q1">Feeling of being burdened as number one</string>
    <string name="Answer_2_PD_S1_Q1">Feeling of being required to reach the gold</string>
    <string name="Answer_3_PD_S1_Q1">Being demanded by public and management to always win</string>
    <string name="Question_2_PD_S1">2. Demands to win</string>
    <string name="Answer_1_PD_S1_Q2">Being expected to win in a team tournament</string>
    <string name="Answer_2_PD_S1_Q2">Should not lose to a lower rank opponent</string>
    <string name="Answer_3_PD_S1_Q2">Being given a target from the management</string>
    <string name="Psychological_Section_2">Experiencing mental fatigue as being a badminton player</string>
    <string name="Question_1_PD_S2">1. Bored with routine training and monotonous life?</string>
    <string name="Reason_1_PD_S2_Q1">Having unpleasant training program</string>
    <string name="Reason_2_PD_S2_Q1">The gruelling physical conditioning</string>
    <string name="Reason_3_PD_S2_Q1">Monotonous training</string>
    <string name="Reason_4_PD_S2_Q1">Bored or get sick with routine training</string>
    <string name="Reason_5_PD_S2_Q1">Training for months without any tournament</string>
    <string name="Reason_6_PD_S2_Q1">Feeling sick and tired of the static, monotony of life</string>
    <string name="Reason_7_PD_S2_Q1">Getting bored being in the room when playing overseas</string>
    <string name="Reason_8_PD_S2_Q1">Experiencing very high boredom of winning all tournaments</string>
    <string name="Reason_9_PD_S2_Q1">Feeling tired of badminton</string>
    <string name="Reason_10_PD_S2_Q1">Feeling of not being able to develop yourself</string>
    <string name="Reason_11_PD_S2_Q1">Feeling bored of having too many tournaments</string>
    <string name="Psychological_Section_3">Fatigue</string>
    <string name="Question_1_PD_S3">1. Are you feeling tired after today\'s training?</string>
    <string name="injury_type">Injury Type :</string>
    <string name="date_of_injury">Date of injury :</string>
    <string name="recovery_duration">Recovery Duration :</string>
    <string name="details">Details :</string>
    <string name="placeholder_username">Enter Username</string>
    <string name="placeholder_pwd">Enter Password</string>
    <string name="login">Login</string>
    <string name="type_detail">type</string>
    <string name="date_detail">date</string>
    <string name="recovery_detail">recovery</string>
    <string name="details_detail">details</string>
    <string name="question">Type your concern to get suggestions</string>
    <string name="user_question_placeholder">enter here</string>
    <string name="recommend">Need advice</string>
</resources>