<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbarStyle="outsideInset"
    tools:context=".PsychologicalDemands">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- SECTION 1 -->

        <TextView
            android:id="@+id/Psychological_Section_1_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Psychological_Section_1"
            android:textSize="24sp"
            android:textColor="@color/colorAccent"/>

        <!-- QUESTION 1 -->
        <TextView
            android:id="@+id/Question_1_PD_S1_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Question_1_PD_S1"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/colorPrimary"/>

        <CheckBox
            android:id="@+id/Answer_1_PD_S1_Q1_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Answer_1_PD_S1_Q1"
            android:layout_marginLeft="25dp"/>

        <CheckBox
            android:id="@+id/Answer_2_PD_S1_Q1_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Answer_2_PD_S1_Q1"
            android:layout_marginLeft="25dp"/>

        <CheckBox
            android:id="@+id/Answer_3_PD_S1_Q1_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Answer_3_PD_S1_Q1"
            android:layout_marginLeft="25dp"/>

        <CheckBox
            android:id="@+id/Answer_4_PD_S1_Q1_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/none"
            android:layout_marginLeft="25dp"/>

        <!-- QUESTION 2 -->

        <TextView
            android:id="@+id/Question_2_PD_S1_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Question_2_PD_S1"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/colorPrimary"/>

        <CheckBox
            android:id="@+id/Answer_1_PD_S1_Q2_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Answer_1_PD_S1_Q2"
            android:layout_marginLeft="25dp"/>

        <CheckBox
            android:id="@+id/Answer_2_PD_S1_Q2_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Answer_2_PD_S1_Q2"
            android:layout_marginLeft="25dp"/>

        <CheckBox
            android:id="@+id/Answer_3_PD_S1_Q2_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Answer_3_PD_S1_Q2"
            android:layout_marginLeft="25dp"/>

        <CheckBox
            android:id="@+id/Answer_4_PD_S1_Q2_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/none"
            android:layout_marginLeft="25dp"/>


        <!-- SECTION 2 -->

        <TextView
            android:id="@+id/Psychological_Section_2_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Psychological_Section_2"
            android:textSize="24sp"
            android:textColor="@color/colorAccent"/>

        <!-- QUESTION 1 -->

        <TextView
            android:id="@+id/Question_1_PD_S2_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Question_1_PD_S2"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/colorPrimary"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton1_Q1_PD_S2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes"
                android:layout_marginLeft="20dp"
                android:onClick="clicked_yes__PD_S2_Q1"/>

            <RadioButton
                android:id="@+id/radioButton2_Q1_PD_S2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no"
                android:onClick="clicked_no__PD_S2_Q1"/>
        </RadioGroup>

        <TextView
            android:id="@+id/reason_PD_S2_Q1_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reason"
            android:textSize="16sp"
            android:layout_marginLeft="25dp"
            android:visibility="gone"/>

        <CheckBox
            android:id="@+id/Reason_1_PD_S2_Q1_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Reason_1_PD_S2_Q1"
            android:layout_marginLeft="25dp"
            android:visibility="gone"/>

        <CheckBox
            android:id="@+id/Reason_2_PD_S2_Q1_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Reason_2_PD_S2_Q1"
            android:layout_marginLeft="25dp"
            android:visibility="gone"/>

        <CheckBox
            android:id="@+id/Reason_3_PD_S2_Q1_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Reason_3_PD_S2_Q1"
            android:layout_marginLeft="25dp"
            android:visibility="gone"/>

        <CheckBox
            android:id="@+id/Reason_4_PD_S2_Q1_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Reason_4_PD_S2_Q1"
            android:layout_marginLeft="25dp"
            android:visibility="gone"/>

        <CheckBox
            android:id="@+id/Reason_5_PD_S2_Q1_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Reason_5_PD_S2_Q1"
            android:layout_marginLeft="25dp"
            android:visibility="gone"/>

        <CheckBox
            android:id="@+id/Reason_6_PD_S2_Q1_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Reason_6_PD_S2_Q1"
            android:layout_marginLeft="25dp"
            android:visibility="gone"/>

        <CheckBox
            android:id="@+id/Reason_7_PD_S2_Q1_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Reason_7_PD_S2_Q1"
            android:layout_marginLeft="25dp"
            android:visibility="gone"/>

        <CheckBox
            android:id="@+id/Reason_8_PD_S2_Q1_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Reason_8_PD_S2_Q1"
            android:layout_marginLeft="25dp"
            android:visibility="gone"/>

        <CheckBox
            android:id="@+id/Reason_9_PD_S2_Q1_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Reason_9_PD_S2_Q1"
            android:layout_marginLeft="25dp"
            android:visibility="gone"/>

        <CheckBox
            android:id="@+id/Reason_10_PD_S2_Q1_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Reason_10_PD_S2_Q1"
            android:layout_marginLeft="25dp"
            android:visibility="gone"/>

        <CheckBox
            android:id="@+id/Reason_11_PD_S2_Q1_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Reason_11_PD_S2_Q1"
            android:layout_marginLeft="25dp"
            android:visibility="gone"/>

        <CheckBox
            android:id="@+id/Reason_12_PD_S2_Q1_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/none"
            android:layout_marginLeft="25dp"
            android:visibility="gone"/>


        <!-- SECTION 3 -->

        <TextView
            android:id="@+id/Psychological_Section_3_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Psychological_Section_3"
            android:textSize="24sp"
            android:textColor="@color/colorAccent"/>

        <!-- QUESTION 1 -->

        <TextView
            android:id="@+id/Question_1_PD_S3_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Question_1_PD_S3"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/colorPrimary"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton1_Q1_PD_S3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no"
                android:layout_marginLeft="5dp"/>

            <RadioButton
                android:id="@+id/radioButton2_Q1_PD_S3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mild"/>

            <RadioButton
                android:id="@+id/radioButton3_Q1_PD_S3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/moderate"
                android:layout_marginLeft="20dp"/>

            <RadioButton
                android:id="@+id/radioButton4_Q1_PD_S3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/severe"/>
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorAccent"
            android:textColor="@android:color/black"
            android:layout_gravity="center"/>

    </LinearLayout>
</ScrollView>
