<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbarStyle="outsideInset"
    tools:context=".questionnaire">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Button
            android:id="@+id/competition_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:onClick="competitionClicked"
            android:text="@string/competition_Q" />

        <Button
            android:id="@+id/precompetition_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:text="@string/precompetition_Q" />

        <Button
            android:id="@+id/psychologial_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:text="@string/psychological_Q" />

        <Button
            android:id="@+id/social_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:text="@string/social_Q" />

        <Button
            android:id="@+id/illness_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:onClick="illnessInjuryClicked"
            android:text="@string/illness_Q" />

        <Button
            android:id="@+id/failure_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:text="@string/failure_Q" />

        <Button
            android:id="@+id/personal_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:onClick="personalConcernClicked"
            android:text="@string/personal_Q" />
    </LinearLayout>
</ScrollView>