<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StressQuestion">


    <TextView
        android:id="@+id/question_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/question"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/user_q"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="134dp"
        android:ems="10"
        android:hint="@string/user_question_placeholder"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/recommend_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="209dp"
        android:layout_marginStart="135dp"
        android:text="@string/recommend"
        android:onClick="recommend_clicked"/>


</RelativeLayout>